Simplify README: download + download & run sections only