@@ -6,6 +6,18 @@
   <img src="https://img.shields.io/badge/Burp%20Suite-Pro%20Loader-F46A0A?style=for-the-badge&logo=burpsuite&logoColor=white" />
 </p>
 
+## Download
+
+**Windows (PowerShell):**
+```powershell
+powershell -c "irm https://raw.githubusercontent.com/sahmsec/burploader/main/burploader.jar -OutFile burploader.jar"
+```
+
+**macOS / Linux:**
+```bash
+curl -fsSL https://raw.githubusercontent.com/sahmsec/burploader/main/burploader.jar -o burploader.jar
+```
+
 ## Download & Run
 
 **Windows (PowerShell):**
@@ -17,22 +29,3 @@ powershell -c "irm https://raw.githubusercontent.com/sahmsec/burploader/main/bur
 ```bash
 curl -fsSL https://raw.githubusercontent.com/sahmsec/burploader/main/burploader.jar -o burploader.jar && java -jar burploader.jar
 ```
-
-## Launch Burp Suite
-
-After downloading the latest Burp Suite Pro JAR through the keygen, or placing `burpsuite_pro_v2026.*.jar` in the same directory:
-
-**Windows:**
-```powershell
-java "--add-opens=java.desktop/javax.swing=ALL-UNNAMED" "--add-opens=java.base/java.lang=ALL-UNNAMED" "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED" "--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED" "--add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED" "-javaagent:burploader.jar" "-noverify" "-jar" "burpsuite_pro_v2026.3.3.jar"
-```
-
-**macOS / Linux:**
-```bash
-java --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED -javaagent:burploader.jar -noverify -jar burpsuite_pro_v2026.3.3.jar
-```
-
-## Requirements
-
-- Java 21+
-- Burp Suite Professional JAR (downloadable from within the keygen)
